Added saved hives functionality without API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="logout">Logout</string>
     <string name="hives">Hives</string>
     <string name="picture_of_header">picture of header</string>
+    <string name="hivestitle">Saved Hives</string>
+    <string name="add_hive">Add Hive</string>
+    <string name="hive_name">Hive Name</string>
 </resources>
